# svd-plus-plus

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
experiments/configs/: paterek-svd.yaml.j2
svd_plus_plus/: registry.py
svd_plus_plus/cli/: __init__.py  cli.py  options.py  types.py
svd_plus_plus/cli/commands/: __init__.py
svd_plus_plus/cli/commands/prepare_data/: command.py  utils.py
svd_plus_plus/cli/commands/train/: command.py  utils.py
svd_plus_plus/core/: __init__.py  state.py  utils.py
svd_plus_plus/datasets/: __init__.py  datapipe.py  datapipe_utils.py  utils.py
svd_plus_plus/model/: __init__.py  callbacks.py  losses.py  metrics.py  model.py  runner.py  typing.py
